fix: report dashboard update remade to dto processing, exception for enums fixed